# chatroom

./: README.md  package-lock.json  package.json
src/: common.js  index.html  login.js  register.html  register.js  styles.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: center.rs  main.rs
src-tauri/src/commands/: auth.rs  room.rs
src-tauri/src/db/: room.rs  user.rs
src-tauri/src/server/: mod.rs  se.rs
src-tauri/src/states/: authState.rs  mod.rs  roomState.rs
src/chat/: chat.css  chat.html  chat.js
src/join_room/: join-room.css  join-room.html  join-room.js
src/room_management/: room-management.css  room-management.html  room-management.js
