[package]
name = "chatroom"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chatroom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
serde_json = "1.0"
tokio-tungstenite = "0.26.2"
futures-util = "0.3"
rand = "0.9.1"
warp = "0.3"
mysql = "26.0.0"


# [[bin]]
# name = "chatroom"
# path = "src/main.rs"
